# agent-harness

./: .gitignore  HARNESS_ANALYSIS.md  README.md  alembic.ini  pyproject.toml
.claude/: settings.local.json
.github/workflows/: harness-ci.yml
alembic/: env.py
alembic/versions/: 20260303_0001_baseline_harness_schema.py
docs/: harness-architecture-design.md  harness-consolidation-implementation-plan.md  harness-consolidation-pr-draft.md  harness-implementation-task-sequence.md  harness-service-architecture.md  harness-team-implementation-plan-v2.md  harness-team-implementation-plan.md  index.md  main-vs-phase6-harness-diff-and-consolidation.md
scripts/: lint_docs.py
src/agent_harness/: __init__.py  cache.py  cleanup.py  config.py  contracts.py  lint.py  mcp_server.py  policy.py  policy_models.py  scaffold.py  session_manager.py  trace_viewer.py  tracing.py  verify.py
src/agent_harness/db/: __init__.py  migrations.py  models.py
src/agent_harness/evals/: __init__.py  runner.py
src/agent_harness/evals/providers/: __init__.py  base.py  promptfoo.py
src/agent_harness/observability/: __init__.py  otel.py
src/agent_harness/output/: __init__.py  compressor.py
src/agent_harness/policy_backends/: base.py  local.py  opa.py
src/agent_harness/runners/: __init__.py  bun_runner.py  generic_runner.py  npm_runner.py  pytest_runner.py
src/harness/: cache.py  manifest.py  mcp_server.py  policy.py  repository.py  scaffold.py  trace_viewer.py  tracing.py  verify.py
src/harness/evals/providers/: local.py  openai_evals.py
src/harness/output/: compressor.py
src/harness/policy_backends/: __init__.py
src/harness/runners/: bun_runner.py  generic_runner.py  npm_runner.py  pytest_runner.py
src/harness/sandbox/: __init__.py
tests/: test_a01_repository.py  test_a02_db_cli.py  test_a02_schema_migrations.py  test_a03_observability.py  test_a04_policy_backends.py  test_a05_eval_providers.py  test_t01_run_identity.py  test_t02_sql_safety.py  test_t03_trace_timestamps.py  test_t04_exit_semantics.py  test_t06_init_project.py  test_t07_feature_ledger.py  test_t08_resume_context.py  test_t09_policy_engine.py  test_t10_task_contract.py  test_t11_manifest.py  test_t13_eval_runner.py  test_t15_onboard_command.py
tests/integration/: test_localstack_container.py
