[project]
name = "agent-harness"
version = "0.1.0"
description = "Zero-Trust Agent Harness for Claude Code development"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "boto3>=1.34.0",
    "duckdb>=0.10.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "duckdb-engine>=0.13.0",
]
migrations = [
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "duckdb-engine>=0.13.0",
]
observability = [
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
]
integration = [
    "testcontainers>=4.8.0",
]
lint = [
    "ruff>=0.1.0",
    "tach>=0.5.0",
    "vulture>=2.10",
]
cleanup = [
    "pre-commit>=3.0.0",
]
frontend = [
    "playwright>=1.40.0",
    "axe-core-python>=0.1.0",
]
data = [
    "sdv>=1.0.0",
    "great-expectations>=0.18.0",
]

[project.scripts]
harness-verify = "agent_harness.verify:app"
harness-scaffold = "agent_harness.scaffold:app"
harness-mcp = "agent_harness.mcp_server:main"
harness-lint = "agent_harness.lint:app"
harness-cleanup = "agent_harness.cleanup:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_harness"]

[tool.pytest.ini_options]
markers = [
    "integration: marks integration tests that require container runtime",
]
